Add TimeSlot in course schedule